# Platform

./: .env  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Dockerfile.cross-arm64  Dockerfile.cross-x86  README.md  build-releases.sh  build.rs  config.toml  harbourmaster_database.db  todo  windows.txt
crates/boat/: Cargo.toml  build.rs  todo
crates/boat/src/: board_computer.rs  boat.rs  boat_ais.rs  boat_gps.rs  boat_logs_cli.rs  main.rs  navigator.rs  serial_driver.rs  systemstate.rs  ui.rs  voyage.rs
crates/boat/src/common/: constants.rs  types.rs  utils.rs
crates/boat/src/ui/: appwindow.slint
crates/harbourmaster/: Cargo.toml  diesel.toml
crates/harbourmaster/migrations/2026-04-15-175144-0000_destinations/: down.sql
crates/harbourmaster/migrations/2026-04-15-175259-0000_voyage_order_versions/: up.sql
crates/harbourmaster/migrations/2026-04-22-151340-0000_populate_db/: down.sql
crates/harbourmaster/src/: clients_registry.rs  database_manager.rs  fms.rs  harbourmaster.rs  harbourmaster_ais.rs  harbourmaster_gps.rs  harbourmaster_web_ui.rs  main.rs
crates/harbourmaster/src/database_manager/: database_api.rs  manager.rs  models.rs  schema.rs
crates/harbourmaster/src/database_manager/migrations/2026-04-15-175144-0000_destinations/: up.sql
crates/harbourmaster/src/database_manager/migrations/2026-04-15-175259-0000_voyage_order_versions/: down.sql  up.sql
crates/harbourmaster/src/database_manager/migrations/2026-04-15-175303-0000_voyage_orders/: down.sql  up.sql
crates/harbourmaster/src/database_manager/migrations/2026-04-22-151340-0000_populate_db/: up.sql
crates/launcher/: Cargo.toml  setup_vhosts.sh
crates/launcher/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: clients_registry.rs  main.rs  radio_frequency.rs
crates/server/src/common/: constants.rs
crates/shared/: Cargo.toml
crates/shared/src/: ais_message.rs  antenna.rs  bitpacker.rs  boat_info.rs  boats_registry.rs  clients_registry.rs  common.rs  config.rs  lib.rs  logs_cli.rs  radio_builder.rs  satcom.rs  satcom_message.rs  slot.rs  slots_map.rs  voyage_order.rs
crates/shared/src/common/: constants.rs  errors.rs  macros.rs  types.rs  utils.rs
harbourmaster-web-interface/: package-lock.json  package.json
harbourmaster-web-interface/app/: app.css  root.tsx  types.tsx
harbourmaster-web-interface/app/dropdown_menu/: dropdown_menu.tsx
harbourmaster-web-interface/app/map/: map.tsx
harbourmaster-web-interface/app/metrics/: metrics.tsx
harbourmaster-web-interface/app/order_version/: order_version.tsx
harbourmaster-web-interface/app/orders/: orders.tsx
harbourmaster-web-interface/app/routes/: home.tsx
harbourmaster-web-interface/app/voyage_order/: voyage_order.tsx
harbourmaster-web-interface/app/voyage_order_creation_form/: voyage_order_creation_form.tsx
src/: ais.rs  antenna.rs  board_computer.rs  boat.rs  boat_ais.rs  boat_antenna.rs  boat_gps.rs  boat_info.rs  boats_registry.rs  clients_registry.rs  common.rs  fms.rs  gps.rs  harbourmaster.rs  harbourmaster_ais.rs  harbourmaster_gps.rs  main.rs  message.rs  radio_frequency.rs  satcom.rs  shared.rs  slot.rs  slots_map.rs  station.rs  systemstate.rs  ui.rs  voyage.rs
src/common/: bitpacker.rs  constants.rs  macros.rs  types.rs  utils.rs
src/shared/: ais_message.rs  antenna.rs  bitpacker.rs  boat_info.rs  boats_registry.rs  message.rs  satcom_message.rs  slot.rs  slots_map.rs  voyage_order.rs
src/shared/common/: constants.rs  types.rs  utils.rs
src/ui/: appwindow.slint
