[package]
name = "boat"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4.43"
colored = "3.1.1"
crc = "3.4.0"
dashmap = "6.1.0"
fontconfig = "0.10.0"
num-traits = "0.2.19"
rand = "0.9.2"
rev_lines = "0.3.0"
serde = "1.0.228"
slint = "1.15.1"
tokio = {version = "1.51.0", features = ["full"]}
toml = "1.1.2"
shared = { path = "../shared" }
serialport = "4.9.0"
getset = "0.1.6"

[build-dependencies]
slint-build = "1.15.1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
