[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
ctrlc = "3.5.2"
dialoguer = "0.12.0"
futures = "0.3.32"
getset = "0.1.6"
num-traits = "0.2.19"
opencv = { version = "0.98.2", default-features = false, features = [
        "highgui",
        "videoio",
] }
serde = { version = "1.0.228", features = ["derive"] }
shared = { path = "../shared" }
sudo = "0.6.0"
tokio = { version = "1.52.1", features = ["full"] }
