[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4.44"
crc = "3.4.0"
dashmap = "6.1.0"
diesel = "2.3.7"
num-traits = "0.2.19"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = {version = "1.51.0", features = ["full"]}
