[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
crc = "3.4.0"
dashmap = "6.1.0"
diesel = "2.3.7"
getset = "0.1.6"
num-traits = "0.2.19"
rand = "0.10.1"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"
thiserror = "2.0.18"
colored = "3.1.1"
libc = "0.2.186"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["crossterm"] }
ansi-to-tui = "8.0.1"
